force-app/main/default/objects/ssot__ShoppingWishlistEngagement__dlm/fields/ssot__BrowserRenderEngineName__c.field-meta.xml
<CustomField>
    <fullName>ssot__BrowserRenderEngineName__c</fullName>
    <label>Browser Render Engine Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BrowserRenderEngineName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>