force-app/main/default/objects/ssot__ShoppingWishlistEngagement__dlm/fields/ssot__rel_1732260216416_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260216416_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistEngagement_Individua_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistEngagement_Individua_rel</relationshipLabel>
    <relationshipName>rel_1732260216416_end</relationshipName>
    <type>Lookup</type>
</CustomField>