force-app/main/default/objects/ssot__ShoppingWishlistEngagement__dlm/fields/ssot__rel_1732260219826_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260219826_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistEngagement_Engagemen_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistEngagement_Engagemen_rel</relationshipLabel>
    <relationshipName>rel_1732260219826_end</relationshipName>
    <type>Lookup</type>
</CustomField>