force-app/main/default/objects/ssot__ShoppingWishlistEngagement__dlm/fields/ssot__rel_1732260235101_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260235101_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistEngagement_DeviceLoc_rel</label>
    <referenceTo>ssot__Locale__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistEngagement_DeviceLoc_rel</relationshipLabel>
    <relationshipName>rel_1732260235101_end</relationshipName>
    <type>Lookup</type>
</CustomField>