force-app/main/default/objects/ssot__ShoppingWishlistEngagement__dlm/fields/ssot__UtmSourceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__UtmSourceName__c</fullName>
    <label>UTM Source</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UtmSourceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>